--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite: ^2.2.8+4
+  provider: ^6.0.5
   google_nav_bar: ^5.0.6
   
 
